--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,23 +11,41 @@
   {{!-- font-awesome --}}
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
   <title>StoryBooks</title>
 </head>
 
 <body>
   {{> _header}}
+  {{#if user}}
+    {{> _add-btn}}
+  {{/if}}
   <main>
     <div class="container">
       {{{body}}}
     </div>
   </main>
+  {{> _footer}}
   {{!-- jQuery --}}
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
   </script>
+  {{!-- materialize js --}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  {{!-- CDEditor CDN --}}
+  <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
+
   <script>
     $(document).ready(() => {
+      // Init the nav
       $('.button-collapse').sideNav();
+      // Init the select 
+      $('select').material_select();
+    });
+
+    // replace textarea editor with CKEditor
+    CKEDITOR.replace('body', {
+      // specify things to show in the CKEditor for safety -- no spaces between things you add
+      plugins: 'wysiwygarea,toolbar,basicstyles,link'
     });
   </script>
 </body>
