--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -1,1 +1,28 @@
-<h1>Welcome to {{user.firstName}} Stories</h1>
+<h1>Stories</h1>
+<div class="row">
+  {{#each stories}}
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/stories/edit/{{id}}" class="btn-floating halfway-fab red hoverable">
+            <i class="fa fa-pencil"></i>
+          </a>
+        </div>
+        <div class="card-content center-align hoverable">
+          <h5>{{title}}</h5>
+          <p class="story-text left-align">{{stripTags (truncate body 150)}}</p>
+          <br>
+          <div class="chip">
+            <img src="{{user.image}}">
+            {{user.firstName}} {{user.lastName}}
+          </div>
+        </div>
+        <div class="card-action center-align">
+          <a class="btn grey" href="/stories/show/{{id}}">Read More</a>
+        </div>
+      </div>
+    </div>
+  {{else}}
+    <p>No stories found</p>
+  {{/each}}
+</div>
